# mbed-cmake-template

./: .clang-format  .editorconfig  .gitignore  .mbed_version  CMakeLists.txt  Makefile  README.md  mbed-cmake.cmake  mbed_app.json  sonar-project.properties
.github/workflows/: build.yml
cmake/: MbedOS-GCCArm.cmake  mbed_create_distro.cmake
cmake/scripts/: configure_cmake_for_target.py
lib/HelloWorld/: HelloWorld.h
libs/HelloWorld/: CMakeLists.txt
scripts/: configure_cmake_for_target.py
spike/blinky/: CMakeLists.txt
spikes/blinky/: CMakeLists.txt
spikes/boink/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
targets/: README.md  custom_targets.json
test/: README.md
